@@ -29,8 +29,11 @@ seqGetData(gdsfile, var.name, .useraw=FALSE)
 \code{"annotation/format/@VARIABLE_NAME"} are used to obtain the index
 associated with these variables.
 
-\code{"$dosage"} returns a RAW/INTEGER matrix for the dosages of reference
-allele.
+\code{"$dosage"} is also allowed for the dosages of reference allele (integer:
+0, 1, 2 and NA for diploid genotypes).
+
+\code{"$dosage_alt"} returns a RAW/INTEGER matrix for the dosages of alternative
+allele without distinguishing different alternative alleles.
 
 \code{"$num_allele"} returns an integer vector with the numbers of distinct
 alleles.
